<resources>
    <string name="app_name">Directorys</string>
    <string name="plants">Растения</string>
    <string name="animals">Животные</string>

    <string name="birds">Птицы</string>
    <string name="mammals">Млекопитающиеся</string>
    <string name="amphibians">Земноводные</string>
    <string name="trees">Деревья</string>
    <string name="flowers">Цветы</string>
    <string name="bushes">Кусты</string>

    <string name="sparrow">Воробей</string>
    <string name="oriole">Иволга</string>
    <string name="magpie">Сорока</string>
    <string name="squirrel">Белка</string>
    <string name="bear">Медведь</string>
    <string name="fox">Лиса</string>
    <string name="toad">Жаба</string>
    <string name="salamander">Углозуб</string>
    <string name="newt">Тритон</string>
    <string name="oak">Дуб</string>
    <string name="birch">Береза</string>
    <string name="pine">Сосна</string>
    <string name="rose">Роза</string>
    <string name="lilies">Лилии</string>
    <string name="chrysanthemum">Хризантема</string>
    <string name="rosehip">Шиповник</string>
    <string name="raspberries">Малина</string>
    <string name="lilac">Сирень</string>

    <string name="description_sparrow">Цвет оперения в верхней части коричнево-бурый с вкраплением черных перьев.
        На голове возле ушей и брюшко светло-серого оттенка. У воробьев маленький короткий хвост и достаточно мощный клюв.
        В среднем длина тельца воробья составляет около 16 см, вес крошечный — от 25 до 35 гр., а размах крыльев до 27 см.</string>
    <string name="description_oriole">"Это небольшая птица с ярким окрасом. Научное название птицы – Oriolus.
        Корень слова имеет сходство с латинским словом aureolus, что значит «золотой». Скорее всего, своё название птица приобрела, благодаря цветной и насыщенной окраске.
        Иволга относится к певчим птицам. Её голос напоминает звуки флейты.</string>
    <string name="description_magpie">Сорока имеет характерное оперение контрастного белого и черного цвета.
        У нее очень длинный черный с зеленоватым отливом хвост (прекрасный руль) и черные с синеватым отливом крылья. Сороки живут небольшими стаями или поодиночке.
        В период гнездования держатся парами. Птицы охотно едят насекомых, ящериц и мышей, выпивают птичьи яйца. </string>
    <string name="description_squirrel">Обычная белка имеет длинное тело, пушистый хвост и длинные ушки.
        Уши белки крупные и вытянутые, иногда с кисточками на конце. Лапки сильные, с крепкими и острыми когтями.
        Гигантские белки имеют размер около 50 см, при этом длина хвоста равна длине тела.</string>
    <string name="description_bear">Тело у этих животных крупное, коренастое, с толстой, короткой шеей и большой головой.
        Мощные челюсти позволяют легко разгрызать как растительную, так и мясную пищу.
        Конечности довольно короткие и слегка изогнуты. Поэтому медведь ходит, покачиваясь из стороны в сторону, и опирается на всю ступню.</string>
    <string name="description_fox">Лисицы имеют характерный родовой признак – стройное удлиненное туловище с довольно короткими конечностями,
        слегка вытянутую морду и хвост. Пушистый хвост лисицы служит своеобразным стабилизатором во время бега,
        а в зимние холода используется для дополнительной защиты от морозов. Длина хвоста лисы зависит от вида.</string>
    <string name="description_toad">Земноводное, окрашенное в серые, бурые или черные с пятнистыми разводами оттенки, легко прячется от врагов.
        Яркий цвет жабы свидетельствует о ее ядовитости. Размер жабы колеблется от 25 мм до 53 см, а вес крупных особей может быть более килограмма.</string>
    <string name="description_salamander">Он имеет широкую, приплюснутую голову, сжатый с боков, но лишенный кожистых плавниковых складок хвост.
        Окраска серо-коричневая или буроватая с мелкими пятнышками и более светлой продольной полосой на спине.
        У сибирского углозуба только по 4 пальца на задних ногах, поэтому его называют четырёхпалым тритоном.</string>
    <string name="description_newt">Это животное, которое относится к классу земноводные, подклассу беспанцирные, отряду хвостатые земноводные. Семейства, к которым относятся тритоны: настоящие саламандры, безлёгочные саламандры и углозубы.
        Тритон – это не жаба и не ящерица, это животное, чья жизнь проходит в двух стихиях: в воде и на суше.</string>
    <string name="description_oak">Род кустарников и деревьев из семейства буковых. Дуб широко славится своей мощностью и силой, высота дуба может составлять 50 метров.
        Эти деревья растут довольно медленно, прибавляя с каждым годом вначале сантиметры в высоту, и только затем – в ширину.</string>
    <string name="description_birch">Дерево высотой 15 — 25 м имеет диаметр ствола до 80 см. Молодые деревца, которые часто путают с ольхой, имеют красно-бурую кору, со временем приобретающую снежно-белый цвет.
        Крона молодой березы узкая, стройная, с возрастом становится широкой и раскидистой, с направленными вверх ветвями.</string>
    <string name="description_pine">Это вечнозеленое хвойное дерево, кустарник или стланик, относится к классу хвойные, порядку сосновые, семейству сосновые, роду сосны.
        Продолжительность жизни сосны колеблется от 100 до 600 лет. Сегодня встречаются единичные деревья, возраст которых приближается к 5 векам.</string>
    <string name="description_rose">Само растение является кустарником, размер которого может сильно колебаться от 15 см и свыше 2 метров.
        Ветки растения покрыты шипами, а листья имеют зеленый окрас и являются непарноперистыми.
        Важным условием для цветения растения является солнечный свет.</string>
    <string name="description_lilies">Они представляют собой травянистые растения с плотным, прямым стеблем длиной от 60 до 180 сантиметров.
        Листья плотно прилегают к стеблю, черешки отсутствуют. Их форма линейно-ланцетная, ширина в среднем равняется 15-20 миллиметрам, а длина 20 сантиметрам.</string>
    <string name="description_chrysanthemum">Небольшие цветки декоративно-овощного растения, представителя семейства Сложноцветных. Цветки довольно мелкие, собранные в корзинки.
        Свое название растение получило благодаря латинскому слову Chrysánthemum, которое в переводе означает «златоцветный», что наиболее полно характеризирует эти цветы.</string>
    <string name="description_rosehip">Это колючий кустарник из семейства розоцветныхвысотой 0,5−3 метра. Листочки почти округлые, или эллиптической формы с зубчатыми краями. Цветёт шиповник особенно красиво.
        Крупные, душистые, красные, розовые или белые цветки по несколько штук собираются в соцветие. Плодами являются гладкие, мясистые ягоды красного, оранжевого и других цветов.</string>
    <string name="description_raspberries">Это многолетнее растение с очень развитым и извилистым корневищем, на котором образуется множество придаточных корней. Надземные побеги прямостоячие,
        высотой от 1,5 до 2,5 метров, в первый год вегетации зеленые, с едва заметным сизоватым налетом, травянистые и покрытые тоненькими шипами.</string>
    <string name="description_lilac">Листья сирени простые, цельнокрайние, яйцевидные, овальные или ланцетные, с заостренными концами;
        впрочем, встречаются сирени с рассеченными и перистыми листьями; долго держатся на растении.</string>
</resources>